# LangGraph-Practice

./: pyproject.toml
Notebooks/: CH-1-Basics.ipynb  CH-2-Pydantic-Graph.ipynb  CH-3-Messages.ipynb  CH-4-Tool-Binding.ipynb
